# minecraft-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  main.py  pyproject.toml
minecraft_bot/: __init__.py  __main__.py  bindings.py  bot.py  config.py  connect.py  minecraft.py  rcon.py  stats.py
scripts/: remote-deploy.sh
tests/: test_bot.py  test_connect.py  test_minecraft.py  test_stats.py
