[project]
name = "minecraft-bot"
version = "0.1.0"
description = "Discord bot for managing an offline-mode Minecraft server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.7.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
minecraft-bot = "minecraft_bot.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
